# rs-saferet

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/: basic_usage.rs
src/: lib.rs  secret_bytes.rs  secret_string.rs
